# auto-ml-lite

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  PRE_COMMIT_SETUP.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: ANOMALY_DETECTION.md  CLASSIFICATION.md  CLUSTERING.md  README.md  REGRESSION.md
examples/: anomaly_example.py  classification_example.py  clustering_example.py  regression_example.py
src/auto_ml_lite/: README.md  __init__.py
src/auto_ml_lite/core/: __init__.py  anomaly.py  cluster.py  preprocessor.py
src/auto_ml_lite/reports/: __init__.py  anomaly_report.py  cluster_report.py  eda.py  training.py
src/auto_ml_lite/utils/: __init__.py
src/ez_automl_lite/: __init__.py
src/ez_automl_lite/core/: __init__.py  anomaly.py  cluster.py  exporter.py  preprocessor.py  trainer.py
src/ez_automl_lite/reports/: __init__.py  anomaly_report.py  cluster_report.py  eda.py  training.py  viz_utils.py
src/ez_automl_lite/utils/: __init__.py  detection.py
