[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-ml-lite"
version = "0.1.0"
authors = [
  { name="Cristopher Coronado", email="cgcoronadom@gmail.com" },
]
description = "A lightweight AutoML library optimized for simple APIs and ONNX export."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flaml[automl]>=2.3.6",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "feature-engine>=1.8.1",
    "joblib>=1.3.2",
    "lightgbm>=4.3.0",
]

[project.optional-dependencies]
onnx = [
    "skl2onnx>=1.17.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "onnxmltools>=1.12.0",
]
reports = [
    "sweetviz>=2.3.1",
]
all = [
    "auto-ml-lite[onnx,reports]"
]

[tool.setuptools.packages.find]
where = ["src"]
