[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ez-automl-lite"
dynamic = ["version"]
authors = [
  { name="Cristopher Coronado", email="cgcoronadom@gmail.com" },
]
description = "A lightweight AutoML library optimized for simple APIs and ONNX export."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}
dependencies = [
    "flaml[automl]>=2.3.6",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "feature-engine>=1.8.1",
    "joblib>=1.3.2",
    "lightgbm>=4.3.0",
]

[project.urls]
Homepage = "https://github.com/cristofima/auto-ml-lite"
Issues = "https://github.com/cristofima/auto-ml-lite/issues"
Repository = "https://github.com/cristofima/auto-ml-lite"

[project.optional-dependencies]
onnx = [
    "skl2onnx>=1.17.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "onnxmltools>=1.12.0",
]
reports = [
    "sweetviz>=2.3.1",
]
cluster = [
    "kneed>=0.8.5",
]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit[toml]>=1.7.10",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]
all = [
    "ez-automl-lite[onnx,reports,cluster]"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/ez_automl_lite/_version.py"

# ============================================================================
# Ruff Configuration - Modern Python linter and formatter
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

# Exclude common directories
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "_version.py",
]

[tool.ruff.lint]
# Enable recommended rules for Python packages
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modernize Python code)
    "B",      # flake8-bugbear (find likely bugs)
    "C4",     # flake8-comprehensions (better comprehensions)
    "SIM",    # flake8-simplify (simplify code)
    "TCH",    # flake8-type-checking (optimize type imports)
    "RUF",    # Ruff-specific rules
    "PL",     # Pylint
    "PERF",   # Performance anti-patterns
]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by formatter)
    "N803",    # Argument names (X_train, X_test are ML conventions)
    "N806",    # Variable names (X, y are ML conventions)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
    "SIM108",  # Ternary operator suggestion (readability preference)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"examples/*.py" = ["T201"]  # Allow print in examples
"scripts/*.py" = ["T201"]   # Allow print in scripts

[tool.ruff.lint.isort]
known-first-party = ["ez_automl_lite"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# Mypy Configuration - Static type checking
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "examples/",
    "scripts/",
    "build/",
]

# ============================================================================
# Bandit Configuration - Security linting
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", "examples", "scripts"]
skips = ["B101", "B601"]  # Skip assert_used and shell=True warnings

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--cov=ez_automl_lite",
    "--cov-report=term-missing",
    "--cov-report=html",
]
